==> TueTran2008/nrf_connect_sdk_clone_v2.2.0/nrf5340_audio_bidirection/src/drivers/es8311.c <==
#include "es8311.h"
#include <zephyr/kernel.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <errno.h>
#include <zephyr/drivers/i2c.h>
#include <zephyr/device.h>
#include "macros_common.h"
#include "hw_codec.h"
#define ES8311_ADDR         0x19
#define FROM_MCLK_PIN       0
#define FROM_SCLK_PIN       1
#define INVERT_MCLK         0 // do not invert
#define INVERT_SCLK         0
#define IS_DMIC             0 // Is it a digital microphone
#define MCLK_DIV_FRE        256
#include <zephyr/logging/log.h>
#define ES8311_DAC_VOL_CFG_DEFAULT() {                      \
    .max_dac_volume = 32,                                   \
    .min_dac_volume = -95.5,                                \
    .board_pa_gain = 0,                         \
    .volume_accuracy = 0.5,                                 \
    .dac_vol_symbol = 1,                                    \
    .zero_volume_reg = 0xBF,                                \
    .reg_value = 0,                                         \
    .user_volume = 0,                                       \
    .offset_conv_volume = NULL,                             \
}

static int es8311_write_reg(uint8_t reg_add, uint8_t data)
{
    //return i2c_bus_write_bytes(i2c_handle, slave_addr, &reg_add, sizeof(reg_add), &data, sizeof(data));
    int ret;
    uint8_t write_data[2];
    struct i2c_msg msg;
    if (!device_is_ready(i2c_codec) || p_es8311_cfg == NULL) {
		return -EIO;
	}
    memset(&msg, 0, sizeof(msg));
    write_data[0] = reg_add;
    write_data[1] = data;
    msg.buf = write_data;
    msg.len = sizeof(write_data);
    msg.flags = I2C_MSG_WRITE | I2C_MSG_STOP;
    ret = i2c_transfer(i2c_codec, &msg, 1 , ES8311_ADDR);
    if(ret)
    {
        return ret;
    }
    return 0;
}

static int es8311_read_reg(uint8_t reg_add)
{
    int ret;
    struct i2c_msg msgs[2];
    //uint8_t write_data[2] = {reg_add, 0};
    uint8_t read_data;
    if (!device_is_ready(i2c_codec) || p_es8311_cfg == NULL) {
		return -EIO;
	}
    memset(msgs, 0, sizeof(msgs));

    msgs[0].buf = &reg_add;
    msgs[0].len = 1;
    msgs[0].flags = I2C_MSG_WRITE;

    msgs[1].buf = (uint8_t*)&read_data;
    msgs[1].len = 1;
    msgs[1].flags = I2C_MSG_READ;

    ret = i2c_transfer(i2c_codec, msgs, 2 , ES8311_ADDR);
    if(ret)
    {
        LOG_ERR("Failed to read i2c register\r\n");
        return ret;
    }
    return read_data;
}

int es8311_codec_ctrl_state(audio_hal_codec_mode_t mode, audio_hal_ctrl_t ctrl_state)
{
    int ret = 0;
    es_module_t es_mode = ES_MODULE_MIN;
    switch (mode) {
        case AUDIO_HAL_CODEC_MODE_ENCODE:
            es_mode  = ES_MODULE_ADC;
            LOG_INF("ES8311 mode ADC Encode\r\n");
            break;
        case AUDIO_HAL_CODEC_MODE_LINE_IN:
            es_mode  = ES_MODULE_LINE;
            LOG_INF("ES8311 mode LINE IN\r\n");
            break;
        case AUDIO_HAL_CODEC_MODE_DECODE:
            es_mode  = ES_MODULE_DAC;
            LOG_INF("ES8311 mode DAC Decode\r\n");
            break;
        case AUDIO_HAL_CODEC_MODE_BOTH:
            es_mode  = ES_MODULE_ADC_DAC;
            LOG_INF("ES8311 mode ADC_DAC\r\n");
            break;
        default:
            es_mode = ES_MODULE_DAC;
            LOG_WRN("Codec mode not support, default is decode mode");
            break;
    }
    if (ctrl_state == AUDIO_HAL_CTRL_START) {
        ret |= es8311_start(es_mode);
        LOG_INF("The codec start working\r\n");
    } else {
        LOG_WRN("The codec is about to stop\r\n");
        ret |= es8311_stop(es_mode);
    }
    return ret;
}

int es8311_start(es_module_t mode)
{
    int ret = 0;
    uint8_t adc_iface = 0, dac_iface = 0;

    dac_iface = es8311_read_reg(ES8311_SDPIN_REG09) & 0xBF;
    adc_iface = es8311_read_reg(ES8311_SDPOUT_REG0A) & 0xBF;
    adc_iface |= BIT(6);
    dac_iface |= BIT(6);

    if (mode == ES_MODULE_LINE) {
        LOG_ERR("The codec es8311 doesn't support ES_MODULE_LINE mode");
        return -1;
    }
    else
    {
        LOG_INF("[ES8311]: MODE LINE\r\n");
    }
    if (mode == ES_MODULE_ADC || mode == ES_MODULE_ADC_DAC) {
        adc_iface &= ~(BIT(6));
    }
    if (mode == ES_MODULE_DAC || mode == ES_MODULE_ADC_DAC) {
        dac_iface &= ~(BIT(6));
    }
    ret |= es8311_write_reg(ES8311_SDPIN_REG09, dac_iface);
    ret |= es8311_write_reg(ES8311_SDPOUT_REG0A, adc_iface);

    ret |= es8311_write_reg(ES8311_ADC_REG17, 0xBF);// Chuan
    ret |= es8311_write_reg(ES8311_SYSTEM_REG0E, 0x02); //Chuan
    ret |= es8311_write_reg(ES8311_SYSTEM_REG12, 0x00); // Nghi ngo, Nhung chac la chuan thoi // ban dau la 0x28
    ret |= es8311_write_reg(ES8311_SYSTEM_REG14, 0x3A /*| 0x80*/);
    /*
     * pdm dmic enable or disable
     */
    int regv = 0;
    if (IS_DMIC) {
        regv = es8311_read_reg(ES8311_SYSTEM_REG14);
        regv |= 0x40;
        ret |= es8311_write_reg(ES8311_SYSTEM_REG14, regv);
    } else {
        regv = es8311_read_reg(ES8311_SYSTEM_REG14);
        regv &= ~(0x40);
        ret |= es8311_write_reg(ES8311_SYSTEM_REG14, regv);
    }
    ret |= es8311_write_reg(ES8311_SYSTEM_REG0D, 0x01);
    ret |= es8311_write_reg(ES8311_ADC_REG15, 0x40);
    ret |= es8311_write_reg(ES8311_DAC_REG37, 0x48);
    ret |= es8311_write_reg(ES8311_GP_REG45, 0x00); 

    ret |= es8311_write_reg(ES8311_ADC_REG17, 0xBF); 
    ret |= es8311_write_reg(ES8311_DAC_REG32, 0xC1);
    /* set internal reference signal (ADCL + DACR) */
    ret |= es8311_write_reg(ES8311_GPIO_REG44, 0x40 /*| 0x80*/) /*|0x80*/;
    es8311_read_all();
    return ret;
}

int es8311_codec_set_voice_volume(int volume)
{
    int res = 0;
    uint8_t reg = 0;
    /*get current volume value*/
    reg = audio_codec_get_dac_reg_value(dac_vol_handle, volume);
    //reg = es8311_codec_get_voice_volume(&volume);
    res = es8311_write_reg(ES8311_DAC_REG32, reg);
    LOG_INF("Set volume:%.2d reg_value:0x%.2x dB:%.1f", dac_vol_handle->user_volume, reg ,
             audio_codec_cal_dac_volume(dac_vol_handle));
    return res;
}

int es8311_codec_get_voice_volume(int *volume)
{
    int res = 0;
    int regv = 0;
    regv = es8311_read_reg(ES8311_DAC_REG32);
    if (regv == -1) {
        *volume = 0;
        res = -1;
    } else {
        if (regv == dac_vol_handle->reg_value) {
            *volume = dac_vol_handle->user_volume;
        } else {
            *volume = 0;
            res = -1;
        }
    }
    LOG_INF("Get volume:%d reg_value:0x%02x", *volume, regv);
    return res;
}

int es8311_set_voice_mute(bool enable)
{
    LOG_DBG("Es8311SetVoiceMute volume:%d", enable);
    es8311_mute(enable);
    return 0;
}
