==> vaca22/ble-scan-module/components/es8311/es8311.c <==
#include <string.h>
#include "es8311.h"
#include "driver/gpio.h"
#include "esp_log.h"
#include "esp_err.h"
#include "es8311_reg.h"
#define MCLK_DIV_FRE \
    128  // 32u // this is valid for 16bit data resolution and MCLK from SCLK
#define CHECK(x)                           \
    do {                                   \
        esp_err_t __;                      \
        if ((__ = x) != ESP_OK) return __; \
    } while (0)
#define CHECK_ARG(VAL)                          \
    do {                                        \
        if (!(VAL)) return ESP_ERR_INVALID_ARG; \
    } while (0)

static int es8311_write_reg(es8311_dev_t *dev, uint8_t reg_addr, uint8_t data) {
    ESP_LOGV(TAG, "%s:%d %s", __FILE__, __LINE__, "es8311_write_reg");
    CHECK_ARG(dev);

    I2C_DEV_TAKE_MUTEX(&dev->i2c_dev);
    if (i2c_dev_write(&dev->i2c_dev, &reg_addr, 1, &data, 1) != ESP_OK) {
        ESP_LOGE(TAG, "es8311 write reg error");
        return ESP_FAIL;
    }
    I2C_DEV_GIVE_MUTEX(&dev->i2c_dev);
    return ESP_OK;
}

int es8311_read_reg(es8311_dev_t *dev, uint8_t reg_addr) {
    ESP_LOGV(TAG, "%s:%d %s", __FILE__, __LINE__, "es8311_read_reg");
    CHECK_ARG(dev);

    uint8_t data = 0;

    I2C_DEV_TAKE_MUTEX(&dev->i2c_dev);
    if (i2c_dev_read(&dev->i2c_dev, &reg_addr, 1, &data, 1) != ESP_OK) {
        ESP_LOGE(TAG, "es8311 read reg error");
    }
    I2C_DEV_GIVE_MUTEX(&dev->i2c_dev);

    return data;
}

esp_err_t es8311_codec_ctrl_state(es8311_dev_t *dev,
                                  audio_hal_codec_mode_t mode,
                                  audio_hal_ctrl_t ctrl_state) {
    esp_err_t ret       = ESP_OK;
    es_module_t es_mode = ES_MODULE_MIN;

    switch (mode) {
        case AUDIO_HAL_CODEC_MODE_ENCODE:
            es_mode = ES_MODULE_ADC;
            break;
        case AUDIO_HAL_CODEC_MODE_LINE_IN:
            es_mode = ES_MODULE_LINE;
            break;
        case AUDIO_HAL_CODEC_MODE_DECODE:
            es_mode = ES_MODULE_DAC;
            break;
        case AUDIO_HAL_CODEC_MODE_BOTH:
            es_mode = ES_MODULE_ADC_DAC;
            break;
        default:
            es_mode = ES_MODULE_DAC;
            ESP_LOGW(TAG, "Codec mode not support, default is decode mode");
            break;
    }

    if (ctrl_state == AUDIO_HAL_CTRL_START) {
        ret |= es8311_start(dev, es_mode);
    } else if (ctrl_state == AUDIO_HAL_CTRL_STOP) {
        ESP_LOGW(TAG, "The codec is about to stop");
        ret |= es8311_stop(dev, es_mode);
    }

    return ret;
}

esp_err_t es8311_start(es8311_dev_t *dev, es_module_t mode) {
    esp_err_t ret     = ESP_OK;
    uint8_t adc_iface = 0, dac_iface = 0;

    dac_iface = es8311_read_reg(dev, ES8311_SDPIN_REG09) & 0xBF;
    adc_iface = es8311_read_reg(dev, ES8311_SDPOUT_REG0A) & 0xBF;
    adc_iface |= BIT(6);
    dac_iface |= BIT(6);

    if (mode == ES_MODULE_LINE) {
        ESP_LOGE(TAG, "The codec es8311 doesn't support ES_MODULE_LINE mode");
        return ESP_FAIL;
    }
    if (mode == ES_MODULE_ADC || mode == ES_MODULE_ADC_DAC) {
        adc_iface &= ~(BIT(6));
    }
    if (mode == ES_MODULE_DAC || mode == ES_MODULE_ADC_DAC) {
        dac_iface &= ~(BIT(6));
    }

    ret |= es8311_write_reg(dev, ES8311_SDPIN_REG09, dac_iface);
    ret |= es8311_write_reg(dev, ES8311_SDPOUT_REG0A, adc_iface);

    ret |= es8311_write_reg(dev, ES8311_ADC_REG17, 0xBF);
    ret |= es8311_write_reg(dev, ES8311_SYSTEM_REG0E, 0x02);
    ret |= es8311_write_reg(dev, ES8311_SYSTEM_REG12, 0x00);
    ret |= es8311_write_reg(dev, ES8311_SYSTEM_REG14, 0x1A);

    /*
     * pdm dmic enable or disable
     */
    int regv = 0;
    if (IS_DMIC) {
        regv = es8311_read_reg(dev, ES8311_SYSTEM_REG14);
        regv |= 0x40;
        ret |= es8311_write_reg(dev, ES8311_SYSTEM_REG14, regv);
    } else {
        regv = es8311_read_reg(dev, ES8311_SYSTEM_REG14);
        regv &= ~(0x40);
        ret |= es8311_write_reg(dev, ES8311_SYSTEM_REG14, regv);
    }

    ret |= es8311_write_reg(dev, ES8311_SYSTEM_REG0D, 0x01);
    ret |= es8311_write_reg(dev, ES8311_ADC_REG15, 0x40);
    ret |= es8311_write_reg(dev, ES8311_DAC_REG37, 0x48);
    ret |= es8311_write_reg(dev, ES8311_GP_REG45, 0x00);

    return ret;
}

esp_err_t es8311_codec_set_voice_volume(es8311_dev_t *dev, int volume) {
    esp_err_t res = ESP_OK;
    if (volume < 0) {
        volume = 0;
    } else if (volume > 100) {
        volume = 100;
    }
    int vol = (volume)*2550 / 1000;
    // ESP_LOGI(TAG, "SET: volume:%d", vol);
    es8311_write_reg(dev, ES8311_DAC_REG32, vol);
    return res;
}

esp_err_t es8311_codec_get_voice_volume(es8311_dev_t *dev, int *volume) {
    esp_err_t res = ESP_OK;
    int regv      = 0;
    regv          = es8311_read_reg(dev, ES8311_DAC_REG32);
    if (regv == ESP_FAIL) {
        *volume = 0;
        res     = ESP_FAIL;
    } else {
        *volume = regv * 100 / 256;
    }
    ESP_LOGI(TAG, "GET: regv:%d volume:%d", regv, *volume);
    return res;
}

esp_err_t es8311_set_voice_mute(bool enable) {
    ESP_LOGI(TAG, "Es8311SetVoiceMute volume:%d", enable);
    // es8311_mute(enable);
    return ESP_OK;
}
